Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.11
-
None
Description
MariaDB startup does not validate plugin-wsrep-provider when wsrep_on=off or wsrep_provider is not set.
Server should not allow to set new variable plugin-wsrep-provider if wsrep_on==off or when wsrep_provider is not set.
$ /test/mtest/GAL_MD281122-mariadb-10.11.2-linux-x86_64-dbg/bin/mysql -A -uroot -S/test/mtest/GAL_MD281122-mariadb-10.11.2-linux-x86_64-dbg/node1/node1_socket.sock -e "show variables like 'wsrep_on'"
|
+---------------+-------+
|
| Variable_name | Value |
|
+---------------+-------+
|
| wsrep_on | OFF |
|
+---------------+-------+
|
$
|
|
|
$ grep plugin-wsrep n1.cnf
|
plugin-wsrep-provider=ON
|
Attachments
Issue Links
- causes
-
MDEV-30318 galera error messages in mariadb log without galera enabled
-
- Closed
-
- relates to
-
MDEV-22570 Split wsrep_provider_options in several options
-
- Closed
-